Third Year/Second Semester/Compiladores/Pratica/Bloco 2 Introdução ao ANTLR-20250222/bloco2/b2_03/Calculator.g4
grammar Calculator;

program: stat* EOF;
stat: expr? NEWLINE ;           

expr returns [Double res]: 
    expr op=('*'|'/'|'%') expr   #ExprNultDivMod
|   expr op=('+'|'-') expr        #ExprAddSub
|    op=('+'|'-') e2 = expr            #UnaryInteger
|   Integer                         #ExprInteger
|   '(' expr ')'                    #ExprParent
;

Integer : [0-9]+;
NEWLINE : '\r'? '\n';
WS : [ \t]+ -> skip;
COMMENT: '#' .*? '\n' -> skip;
